2011-09-02	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/nios2-utility.h: Avoid redefines with Altera HAL.
	Declare _Nios2_ISR_Set_level().
	* nios2-context-initialize.c: Use _Nios2_ISR_Set_level().
	* nios2-isr-set-level.c: Define _Nios2_ISR_Set_level().

2011-09-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpu.c, cpu_asm.S: Removed files.
	* nios2-context-initialize.c, nios2-context-switch.S,
	nios2-fatal-halt.c, nios2-initialize-vectors.c, nios2-initialize.c,
	nios2-isr-get-level.c, nios2-isr-install-raw-handler.c,
	nios2-isr-install-vector.c, nios2-isr-is-in-progress.c,
	nios2-isr-set-level.c, nios2-thread-dispatch-disabled.c,
	rtems/score/nios2-utility.h: New files.
	* Makefile.am, preinstall.am: Reflect changes above.
	* irq.c: Update due to API changes.
	* rtems/score/cpu.h: New functions _CPU_Initialize_vectors(),
	_CPU_ISR_Set_level(), and _CPU_Fatal_halt() (instead of macros).
	Support for external interrupt controller (EIC).  Documentation
	changes.

2011-08-18	Chris Johns <chrisj@rtems.org>

	* cpu.c: Fix the ISR get level for the IIC. Make
	_CPU_Context_Initialize a function rather than inlined.
	* cpu_asm.S: Do not enable interrupt on return, rather resume the
	state on entry to the ISR.
	* irq.c, nios2/nios2-iic-low-level.S: Change the ISR handler so
	the ipending decoding is in C and within the interrupt
	context. This is usable with the Altera HAL directly.
	* rtems/score/cpu.h: Add ienable and ipending interfaces. Add some
	comments. Remove _CPU_Context_Initialize.

2011-08-14	Chris Johns <chrisj@rtems.org>

	* rtems/score/cpu.h: Clear the vector table for simple vectored
	interrupts.
	* irq.c: Add support for using the IIC with the Altera HAL.
	
2011-08-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Removed superfluous comments.  Format.  Include
	by assembler support. Removed superfluous floating-point support.
	Stack alignment is now 4.
